fix: join page textarea del >>> style+overflowY:auto //// contac>>>>contact modify ///  footer area site_search placeholder padding-left 10px

--- a/css/common.css
+++ b/css/common.css
@@ -268,6 +268,7 @@
     height: 40px;
     width: 70%;
     float: left;
+    padding: 10px;
 }
 
 #footer .site_search button{
@@ -275,7 +276,6 @@
     height: 40px;
     width: 30%;
     float: left;
-
 }
 
 
@@ -306,4 +306,5 @@
 
 input::placeholder{
     font-size: 20px;
+    /* padding-left: 10px; */
 }
